--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Welcome Sokaribo</h1>
     <h3>Welcome Matilda</h3>
     <h5>I'm {{ last_name }}</h5>
@@ -21,5 +15,4 @@
     {% endfor %}
     <br/><br/>
     {{ favorite_pizza.0 }}
-</body>
-</html>
+{% endblock %}
