--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,9 @@
-<br/>
-<center>
-    <h1>404 Error</h1>
-    <p>Sorry, Page Not Found - Try again...</p>
-</center>
+{% extends 'base.html' %}
+
+{% block content %}
+    <br/>
+    <center>
+        <h1>404 Error</h1>
+        <p>Sorry, Page Not Found - Try again...</p>
+    </center>
+{% endblock %}
