--- a/templates/500.html
+++ b/templates/500.html
@@ -1,5 +1,9 @@
-<br/>
-<center>
-    <h1>500 Internal Server Error</h1>
-    <p>Soory, Try again...</p>
-</center>
+{% extends 'base.html' %}
+
+{% block content %}
+    <br/>
+    <center>
+        <h1>500 Internal Server Error</h1>
+        <p>Soory, Try again...</p>
+    </center>
+{% endblock %}
